--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               Разработка сайтов под ключ
             </p>
             <div class="header-button-block">
-              <a href="# class="header-button"
+              <a href="https://t.me/marat_meruasov  class="header-button"
                 >Связаться</a
               >
               <small>*Это бесплатно</small>
